# TexSyn

./: .gitignore  CMakeLists.txt  COTS.cpp  COTS.h  Camouflage.h  Color.cpp  Color.h  Disk.cpp  Disk.h  EvoCamoGame.h  GP.h  GUI.cpp  GUI.h  Generators.cpp  Generators.h  LICENSE  Operators.cpp  Operators.h  PerlinNoise.h  README.md  RandomSequence.h  SimpleImageMatch.h  TexSyn.h  Texture.cpp  Texture.h  TwoPointTransform.h  UnitTests.cpp  UnitTests.h  Utilities.cpp  Utilities.h  Vec2.cpp  Vec2.h  Version.h  Version.h.in  main.cpp
TexSyn.xcodeproj/: project.pbxproj
TexSyn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TexSyn.xcodeproj/project.xcworkspace/xcuserdata/cwr.xcuserdatad/: UserInterfaceState.xcuserstate
TexSyn.xcodeproj/xcshareddata/xcschemes/: texsyn.xcscheme
TexSyn.xcodeproj/xcuserdata/cwr.xcuserdatad/xcschemes/: xcschememanagement.plist
docs/: IEC-TR-CWR-2021-1.html  evo_camo_game_doc.html  graveyard.rtf  index.html
docs/Paper_B/: Paper_B.pages
docs/coc_poster/: coc.bib  coc.tex
docs/coc_report/: coc.bib  coc.tex
docs/obsolete_code/: LimitHue.h.txt
